--- a/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
+++ b/tests/markup/snapshots/file-mob2-zip-png-ro.snap.html
@@ -1,4 +1,4 @@
-<div class="sd-file sd-file--mobile">
+<div class="sd-file sd-file--answered sd-file--mobile">
 	<input class="form-control sd-visuallyhidden" disabled="" id="testid0i" multiple="" placeholder="Question title" style="color:transparent;" type="file">
 	<div class="sd-file__drag-area">
 		<div class="sd-file__decorator">
