--- a/tests/markup/snapshots/panel-page-swnl-v2.snap.html
+++ b/tests/markup/snapshots/panel-page-swnl-v2.snap.html
@@ -1,5 +1,5 @@
 <div style="flex:1 1 50%; max-width:100%; min-width:300px;">
-	<div aria-invalid="false" aria-required="false" class="sd-question sd-question--html sd-row__question" data-name="question0" id="testid0" role="textbox">
+	<div class="sd-question sd-question--html sd-row__question" data-name="question0" id="testid0">
 		<div class="sd-question__content" role="presentation">
 			<div class="sd-html">HTML1</div>
 		</div>
@@ -10,7 +10,7 @@
 		<div class="sd-panel__content" id="testidp0_content">
 			<div class="sd-clearfix sd-row">
 				<div style="flex:1 1 100%; max-width:100%; min-width:300px;">
-					<div aria-invalid="false" aria-required="false" class="sd-element--nested sd-question sd-question--html sd-row__question" data-name="question1" id="testid1" role="textbox">
+					<div class="sd-element--nested sd-question sd-question--html sd-row__question" data-name="question1" id="testid1">
 						<div class="sd-question__content" role="presentation">
 							<div class="sd-html">HTML2</div>
 						</div>
