--- a/tests/markup/snapshots/page-swnl-title-v2.snap.html
+++ b/tests/markup/snapshots/page-swnl-title-v2.snap.html
@@ -1,5 +1,5 @@
 <div style="flex:1 1 50%; max-width:100%; min-width:min(100%, 300px);">
-	<div class="sd-element sd-element--with-frame sd-question sd-row__question sd-row__question--small" data-name="question0" id="testid0">
+	<div class="sd-element sd-element--with-frame sd-question sd-question--title-top sd-row__question sd-row__question--small" data-name="question0" id="testid0">
 		<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
 			<h5 class="sd-element__title sd-question__title sd-title" id="testid0_ariaTitle">
 				<span aria-hidden="true" class="sd-element__num" style="position:static;">1.</span>
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <div style="flex:1 1 50%; max-width:100%; min-width:min(100%, 300px);">
-	<div class="sd-element sd-element--with-frame sd-question sd-row__question sd-row__question--small" data-name="question1" id="testid1">
+	<div class="sd-element sd-element--with-frame sd-question sd-question--title-top sd-row__question sd-row__question--small" data-name="question1" id="testid1">
 		<div class="sd-element__header sd-element__header--location-top sd-question__header sd-question__header--location-top">
 			<h5 class="sd-element__title sd-question__title sd-title" id="testid1_ariaTitle">
 				<span aria-hidden="true" class="sd-element__num" style="position:static;">2.</span>
