--- a/tests/markup/snapshots/signaturepad-with-backgroundImage.snap.html
+++ b/tests/markup/snapshots/signaturepad-with-backgroundImage.snap.html
@@ -1,5 +1,5 @@
 <div class="sjs_sp_container sv_q_signaturepad" style="height:200px; width:300px;">
-	<div class="sjs_sp_placeholder">Sign here</div>
+	<div class="sjs_sp_placeholder"><span class="sv-string-viewer">Sign here</span></div>
 	<div>
 		<img class="sjs_sp__background-image" height="200" src="https://surveyjs.io/Content/Images/examples/image-picker/lion.jpg" width="300">
 			<canvas class="sjs_sp_canvas" height="200" style="height:200px; user-select:none; width:300px;" tabindex="0" width="300">
