--- a/tests/markup/snapshots/ranking-selectToRankEnabled-vertical.snap.html
+++ b/tests/markup/snapshots/ranking-selectToRankEnabled-vertical.snap.html
@@ -6,21 +6,19 @@
 				</div>
 				<div class="sv-ranking-item__content">
 					<div class="sv-ranking-item__icon-container">
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover" height="16" viewBox="0 0 10 16" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M6 2C6 0.9 6.9 0 8 0C9.1 0 10 0.9 10 2C10 3.1 9.1 4 8 4C6.9 4 6 3.1 6 2ZM2 0C0.9 0 0 0.9 0 2C0 3.1 0.9 4 2 4C3.1 4 4 3.1 4 2C4 0.9 3.1 0 2 0ZM8 6C6.9 6 6 6.9 6 8C6 9.1 6.9 10 8 10C9.1 10 10 9.1 10 8C10 6.9 9.1 6 8 6ZM2 6C0.9 6 0 6.9 0 8C0 9.1 0.9 10 2 10C3.1 10 4 9.1 4 8C4 6.9 3.1 6 2 6ZM8 12C6.9 12 6 12.9 6 14C6 15.1 6.9 16 8 16C9.1 16 10 15.1 10 14C10 12.9 9.1 12 8 12ZM2 12C0.9 12 0 12.9 0 14C0 15.1 0.9 16 2 16C3.1 16 4 15.1 4 14C4 12.9 3.1 12 2 12Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover">
+							<use xlink:href="#icon-drag-n-drop" class="">
+							</use>
 						</svg>
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus" height="24" viewBox="0 0 10 24" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10 5L5 0L0 5H4V9H6V5H10Z" class="">
-							</path>
-							<path d="M6 19V15H4V19H0L5 24L10 19H6Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus">
+							<use xlink:href="#icon-ranking-arrows" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-							<path d="M13 7H3V9H13V7Z" class="">
-							</path>
+						<svg class="">
+							<use xlink:href="#icon-ranking-dash" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
@@ -35,21 +33,19 @@
 				</div>
 				<div class="sv-ranking-item__content">
 					<div class="sv-ranking-item__icon-container">
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover" height="16" viewBox="0 0 10 16" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M6 2C6 0.9 6.9 0 8 0C9.1 0 10 0.9 10 2C10 3.1 9.1 4 8 4C6.9 4 6 3.1 6 2ZM2 0C0.9 0 0 0.9 0 2C0 3.1 0.9 4 2 4C3.1 4 4 3.1 4 2C4 0.9 3.1 0 2 0ZM8 6C6.9 6 6 6.9 6 8C6 9.1 6.9 10 8 10C9.1 10 10 9.1 10 8C10 6.9 9.1 6 8 6ZM2 6C0.9 6 0 6.9 0 8C0 9.1 0.9 10 2 10C3.1 10 4 9.1 4 8C4 6.9 3.1 6 2 6ZM8 12C6.9 12 6 12.9 6 14C6 15.1 6.9 16 8 16C9.1 16 10 15.1 10 14C10 12.9 9.1 12 8 12ZM2 12C0.9 12 0 12.9 0 14C0 15.1 0.9 16 2 16C3.1 16 4 15.1 4 14C4 12.9 3.1 12 2 12Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover">
+							<use xlink:href="#icon-drag-n-drop" class="">
+							</use>
 						</svg>
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus" height="24" viewBox="0 0 10 24" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10 5L5 0L0 5H4V9H6V5H10Z" class="">
-							</path>
-							<path d="M6 19V15H4V19H0L5 24L10 19H6Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus">
+							<use xlink:href="#icon-ranking-arrows" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-							<path d="M13 7H3V9H13V7Z" class="">
-							</path>
+						<svg class="">
+							<use xlink:href="#icon-ranking-dash" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
@@ -64,21 +60,19 @@
 				</div>
 				<div class="sv-ranking-item__content">
 					<div class="sv-ranking-item__icon-container">
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover" height="16" viewBox="0 0 10 16" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M6 2C6 0.9 6.9 0 8 0C9.1 0 10 0.9 10 2C10 3.1 9.1 4 8 4C6.9 4 6 3.1 6 2ZM2 0C0.9 0 0 0.9 0 2C0 3.1 0.9 4 2 4C3.1 4 4 3.1 4 2C4 0.9 3.1 0 2 0ZM8 6C6.9 6 6 6.9 6 8C6 9.1 6.9 10 8 10C9.1 10 10 9.1 10 8C10 6.9 9.1 6 8 6ZM2 6C0.9 6 0 6.9 0 8C0 9.1 0.9 10 2 10C3.1 10 4 9.1 4 8C4 6.9 3.1 6 2 6ZM8 12C6.9 12 6 12.9 6 14C6 15.1 6.9 16 8 16C9.1 16 10 15.1 10 14C10 12.9 9.1 12 8 12ZM2 12C0.9 12 0 12.9 0 14C0 15.1 0.9 16 2 16C3.1 16 4 15.1 4 14C4 12.9 3.1 12 2 12Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--hover">
+							<use xlink:href="#icon-drag-n-drop" class="">
+							</use>
 						</svg>
-						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus" height="24" viewBox="0 0 10 24" width="10" xmlns="http://www.w3.org/2000/svg">
-							<path d="M10 5L5 0L0 5H4V9H6V5H10Z" class="">
-							</path>
-							<path d="M6 19V15H4V19H0L5 24L10 19H6Z" class="">
-							</path>
+						<svg class="sv-ranking-item__icon sv-ranking-item__icon--focus">
+							<use xlink:href="#icon-ranking-arrows" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__index sv-ranking-item__index--empty">
-						<svg height="16" viewBox="0 0 16 16" width="16" xmlns="http://www.w3.org/2000/svg" class="">
-							<path d="M13 7H3V9H13V7Z" class="">
-							</path>
+						<svg class="">
+							<use xlink:href="#icon-ranking-dash" class="">
+							</use>
 						</svg>
 					</div>
 					<div class="sv-ranking-item__text">
