--- a/tests/markup/snapshots/signaturepad.snap.html
+++ b/tests/markup/snapshots/signaturepad.snap.html
@@ -1,9 +1,9 @@
-<div class="sjs_sp_container sv_q_signaturepad" style="width:min(100%, 300px);">
+<div class="sjs_sp_container sv_q_signaturepad" style="width:300px;">
 	<div class="sjs_sp_placeholder">
 		<span class="sv-string-viewer">Sign here</span>
 	</div>
 	<div>
-		<canvas class="sjs_sp_canvas" height="200" style="user-select:none; width:min(100%, 300px);" tabindex="0" width="300">
+		<canvas class="sjs_sp_canvas" height="200" style="user-select:none; width:300px;" tabindex="0" width="300">
 		</canvas>
 	</div>
 	<div class="sjs_sp_controls">
