--- a/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns.snap.html
+++ b/tests/markup/snapshots/matrixdynamic-show-in-multiple-columns.snap.html
@@ -20,7 +20,7 @@
 				<td class="sd-table__cell sd-table__cell--row-text" colspan="1" data-responsive-title="row1" title="">
 					<span class="sv-string-viewer">row1</span>
 				</td>
-				<td class="sd-table__cell--item" colspan="1" data-responsive-title="Item 1" title="Item 1">
+				<td class="sd-table__cell sd-table__cell--item" colspan="1" data-responsive-title="Item 1" title="Item 1">
 					<div class="sd-table__question-wrapper">
 						<div class="sd-item sd-item--allowhover sd-radio sd-radio--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 							<label class="sd-selectbase__label">
@@ -31,7 +31,7 @@
 						</div>
 					</div>
 				</td>
-				<td class="sd-table__cell--item" colspan="1" data-responsive-title="Item 1" title="Item 1">
+				<td class="sd-table__cell sd-table__cell--item" colspan="1" data-responsive-title="Item 1" title="Item 1">
 					<div class="sd-table__question-wrapper">
 						<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 							<label class="sd-selectbase__label">
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 				</td>
-				<td class="sd-table__cell--item" colspan="1" data-responsive-title="Item 2" title="Item 2">
+				<td class="sd-table__cell sd-table__cell--item" colspan="1" data-responsive-title="Item 2" title="Item 2">
 					<div class="sd-table__question-wrapper">
 						<div class="sd-checkbox sd-checkbox--allowhover sd-item sd-item--allowhover sd-selectbase__item sd-selectbase__item--inline" role="presentation">
 							<label class="sd-selectbase__label">
