--- a/tests/markup/snapshots/panel-question-headers.snap.html
+++ b/tests/markup/snapshots/panel-question-headers.snap.html
@@ -8,7 +8,7 @@
 				<span class="sv-string-viewer sv-string-viewer--multiline">panel_description</span>
 			</div>
 		</div>
-		<div class="sd-panel__content" id="testidp0_content">
+		<div class="sd-element__content sd-panel__content" id="testidp0_content">
 			<div class="sd-clearfix sd-row">
 				<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 					<div class="sd-element sd-element--nested sd-question sd-question--title-top sd-row__question sd-row__question--small" data-name="question1" id="testid0">
