--- a/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
+++ b/tests/markup/snapshots/paneldynamic-no-footer-2.snap.html
@@ -1,10 +1,10 @@
 <div style="flex:1 1 100%; max-width:100%; min-width:auto;">
 	<div aria-invalid="false" aria-required="false" class="sd-element sd-element--complex sd-element--with-frame sd-question sd-question--complex sd-question--paneldynamic sd-row__question" data-name="question1" role="textbox">
-		<div class="sd-question__content" role="presentation">
+		<div class="sd-element__content sd-question__content" role="presentation">
 			<div class="sd-paneldynamic">
 				<div class="sd-paneldynamic__panel-wrapper">
 					<div class="sd-element sd-element--complex sd-panel sd-row__panel">
-						<div class="sd-panel__content">
+						<div class="sd-element__content sd-panel__content">
 							<div class="sd-clearfix sd-row">
 								<div style="flex:1 1 100%; max-width:100%; min-width:min(100%, 300px);">
 									<div class="sd-element sd-element--nested sd-question sd-row__question sd-row__question--small" data-name="question2">
@@ -18,7 +18,9 @@
 								<div class="sv-action">
 									<div class="sv-action__content">
 										<button class="sd-action sd-action--negative sd-paneldynamic__btn sd-paneldynamic__remove-btn" type="button">
-											<span><span class="sv-string-viewer">Remove</span></span>
+											<span>
+												<span class="sv-string-viewer">Remove</span>
+											</span>
 											<span class="sd-hidden">
 											</span>
 										</button>
