--- a/examples/jquery-ui/index.html
+++ b/examples/jquery-ui/index.html
@@ -3,13 +3,12 @@
   <head>
     <title>Welcome to JQuery</title>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/preact/10.22.0/preact.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- <link rel="stylesheet" href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="../../build/survey-jquery-ui/survey.css" />
+    <!-- <link rel="stylesheet" href="../../build/survey-jquery-ui/survey.css" /> -->
     <!-- <link rel="stylesheet" href="../../build/survey-jquery-ui/modern.css" /> -->
     <link rel="stylesheet" href="../../build/survey-jquery-ui/defaultV2.css" />
     <script src="../../build/survey-core/survey.core.js"></script>
