--- a/tests/markup/snapshots/survey-theme-variables.snap.html
+++ b/tests/markup/snapshots/survey-theme-variables.snap.html
@@ -1,2 +1,2 @@
-<div class="sv_default_css sv_main" style="--sjs-test:val;">
+<div class="sv_default_css sv_default_css--pages sv_main" style="--sjs-test:val;">
 </div>
